Add meta header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+    <!-- ============== BALISES ESSENTIELLES ============== -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plurk – Tailwind CSS Multipurpose Landing Templates</title>
-    <!-- Favicon -->
-    <link rel="icon" type="icon" href="assets/images/logo-sans-lettrage.png" />
+
+    <!-- Titre optimisé pour Google (le plus important) -->
+    <title>RépaPC | Réparation & Optimisation de PC à Aix-en-Provence</title>
+
+    <!-- Description pour les résultats de recherche (donne envie de cliquer) -->
+    <meta name="description" content="Besoin d'un dépannage informatique à Aix-en-Provence ? RépaPC est votre spécialiste pour la réparation et l'optimisation de PC fixes, portables et gaming. Service rapide et efficace." />
+
+    <!-- Mots-clés pour les moteurs de recherche -->
+    <meta name="keywords" content="réparation pc aix en provence, dépannage informatique aix en provence, optimisation pc, pc lent, pc gaming, réparation ordinateur portable, RépaPC" />
+
+    <!-- Auteur -->
+    <meta name="author" content="RépaPC" />
+
+
+    <!-- ============== SEO AVANCÉ & IMAGE DE MARQUE ============== -->
+    <link rel="canonical" href="https://repapc.weboservice.fr/" />
+
+    <!-- Favicons (icônes du site pour navigateur, favoris, etc.) -->
+    <link rel="icon" type="image/png" href="assets/images/logo-sans-lettrage.png" />
+    <link rel="apple-touch-icon" href="assets/images/logo-sans-lettrage.png" />
+
+
+    <!-- ============== PARTAGE SUR LES RÉSEAUX SOCIAUX (Open Graph & Twitter) ============== -->
+    <!-- Ces balises contrôlent l'apparence de votre lien quand il est partagé sur Facebook, LinkedIn, etc. -->
+    <meta property="og:title" content="RépaPC | Réparation & Optimisation de PC à Aix-en-Provence" />
+    <meta property="og:description" content="Spécialiste du dépannage de PC fixes, portables et gaming sur Aix-en-Provence." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://repapc.weboservice.fr/" />
+
+    <meta property="og:image" content="https://repapc.weboservice.fr/assets/images/repa-pc-meta.png" />
+    <meta property="og:site_name" content="RépaPC" />
+    <meta property="og:locale" content="fr_FR" />
+
+    <!-- Idem pour Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="RépaPC | Réparation & Optimisation de PC à Aix-en-Provence" />
+    <meta name="twitter:description" content="Spécialiste du dépannage de PC fixes, portables et gaming sur Aix-en-Provence." />
+
+    <meta name="twitter:image" content="https://repapc.weboservice.fr/assets/images/repa-pc-meta.png" />
+
+
+    <!-- ============== RESSOURCES CSS ET JS ============== -->
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;700;800;900&display=swap"
           rel="stylesheet" />
@@ -16,7 +56,7 @@
     <link href="assets/css/aos.css" rel="stylesheet" />
     <!-- FancyBox -->
     <link rel="stylesheet" href="assets/css/fancybox.css" />
-    <!-- accordion -->
+    <!-- Accordion -->
     <link rel="stylesheet" href="assets/css/accordion.min.css" />
     <!-- Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
