update logo size

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
                     <!-- Logo par défaut (noir) : visible par défaut, caché au scroll -->
                     <img src="assets/images/logo-sans-lettrage.png"
                          alt="logo"
-                         class="h-20 block scrolled:hidden" />
+                         class="h-10 md:h-20 block scrolled:hidden" />
 
                     <!-- Logo light (blanc) : caché par défaut, visible au scroll -->
                     <img src="assets/images/logo-light-sans-lettrage.png"
                          alt="logo"
-                         class="h-20 hidden scrolled:block" />
+                         class="h-10 md:h-20 hidden scrolled:block" />
                 </a>
                 <div class="flex items-center">
                     <div onclick="toggleMenu()" class="overlay fixed inset-0 z-[51] hidden bg-black/60 lg:hidden"></div>
