--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <!-- Logo light (blanc) : caché par défaut, visible au scroll -->
                     <img src="assets/images/logo-light-sans-lettrage.png"
                          alt="logo"
-                         class="h-10 md:h-20 hidden scrolled:block" />
+                         class="h-20 max-md:h-10 hidden scrolled:block" />
                 </a>
                 <div class="flex items-center">
                     <div onclick="toggleMenu()" class="overlay fixed inset-0 z-[51] hidden bg-black/60 lg:hidden"></div>
