forget orther logo rule

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <!-- Logo par défaut (noir) : visible par défaut, caché au scroll -->
                     <img src="assets/images/logo-sans-lettrage.png"
                          alt="logo"
-                         class="h-10 md:h-20 block scrolled:hidden" />
+                         class="h-20 max-md:h-10 block scrolled:hidden" />
 
                     <!-- Logo light (blanc) : caché par défaut, visible au scroll -->
                     <img src="assets/images/logo-light-sans-lettrage.png"
