add overflow hidden on nav ul

--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
                                 </svg>
                             </button>
                         </div>
-                        <ul>
+                        <ul class="overflow-hidden">
                             <li><a href="#home" onclick="toggleMenu()">Accueil</a></li>
                             <li><a href="#quality" onclick="toggleMenu()">Qualité</a></li>
                             <li><a href="#services" onclick="toggleMenu()">Services</a></li>
-                            <li><a href="#tarifs" onclick="toggleMenu()">Tarifs</a></li>
+                            <li><a href="#tarifs" onclick="toggleMenu()">Prix</a></li>
                             <li><a href="#engagement" onclick="toggleMenu()">Notre Engagement</a></li>
 
                             <!-- La fonctionnalité de recherche est conservée telle quelle -->
