adapt to performance insight

--- a/index.html
+++ b/index.html
@@ -248,8 +248,14 @@
     *************************************************************
     -->
     <div class="-mt-[82px] flex-grow overflow-hidden lg:-mt-[106px]">
-        <section id="home" class="bg-[url(../images/consulting/banner-bg.jpg)] bg-cover bg-center bg-no-repeat pt-[82px] text-white lg:pt-[106px]">
-
+        <section id="home" class="relative pt-[82px] lg:pt-[106px] text-white">
+            <img
+                src="assets/images/consulting/banner-bg.webp"
+                alt="Bannière"
+                width="1920"
+                height="828"
+                class="absolute inset-0 w-full h-full object-cover"
+            >
             <!-- Container pour les particules -->
             <div id="tsparticles" class="absolute inset-0 z-0"></div>
 
@@ -989,8 +995,8 @@
                                     <span class="text-[22px] font-bold transition-all duration-300 group-hover:scale-105">Nous écrire</span>
                                 </div>
                                 <span class="font-bold text-black dark:text-white text-sm lg:text-base break-all transition-all duration-300 group-hover:text-white group-hover:scale-105">
-        thomas.mirabile@gmail.com
-    </span>
+                                    thomas.mirabile@gmail.com
+                                </span>
                             </a>
 
 
