Fix - apply little changes other the index.html

--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@
                                 vos appareils avec un service personnalisé et des solutions durables adaptées à
                                 vos besoins.
                             </p>
+                            <br/>
                             <a href="#contact">
                                 <button type="button"
                                         class="btn rounded-md text-white shadow-[10px_15px_30px_rgba(119,128,161,0.2)]">
@@ -557,7 +558,7 @@
                         <a href="#contact">
                             <button type="button"
                                     class="mt-auto w-full rounded-md bg-gray py-4 uppercase text-white duration-200 hover:bg-primary">
-                                Profitez de l'offre
+                                Profiter de l'offre
                             </button>
                         </a>
                     </div>
@@ -836,7 +837,7 @@
                                 class="text-[34px] font-black text-white"
                                 data-vanilla-counter
                                 data-start-at="0"
-                                data-end-at="500"
+                                data-end-at="60"
                                 data-time="4000"
                                 data-delay="1000"
                                 data-format="{}+"
@@ -851,7 +852,7 @@
                                 class="text-[34px] font-black text-white"
                                 data-vanilla-counter
                                 data-start-at="0"
-                                data-end-at="15"
+                                data-end-at="10"
                                 data-time="4000"
                                 data-delay="1000"
                                 data-format="{}+"
@@ -975,7 +976,7 @@
                                 </span>
                             </a>
 
-                            <a href="mailto:thomas.mirabile@gmail.com" class="group block rounded-[32px] bg-white px-4 py-6 dark:bg-gray-dark md:p-7 transition-all duration-300 hover:bg-primary hover:shadow-xl hover:scale-110 active:scale-105 cursor-pointer" data-aos="fade-up" data-aos-duration="1000">
+                            <a href="mailto:repapc@weboservice.fr" class="group block rounded-[32px] bg-white px-4 py-6 dark:bg-gray-dark md:p-7 transition-all duration-300 hover:bg-primary hover:shadow-xl hover:scale-110 active:scale-105 cursor-pointer" data-aos="fade-up" data-aos-duration="1000">
                                 <div class="mb-4 flex items-center gap-2 text-primary group-hover:text-white transition-colors duration-300">
                                     <div class="transition-transform duration-300 group-hover:scale-110">
                                         <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -994,9 +995,10 @@
                                     </div>
                                     <span class="text-[22px] font-bold transition-all duration-300 group-hover:scale-105">Nous écrire</span>
                                 </div>
-                                <span class="font-bold text-black dark:text-white text-sm lg:text-base break-all transition-all duration-300 group-hover:text-white group-hover:scale-105">
-                                    thomas.mirabile@gmail.com
+                                <span class="font-bold text-black dark:text-white text-[8px] sm:text-sm lg:text-base break-all transition-all duration-300 group-hover:text-white group-hover:scale-105">
+                                    repapc@weboservice.fr
                                 </span>
+
                             </a>
 
 
@@ -1022,9 +1024,6 @@
                                 <h5 class="font-bold text-black dark:text-white lg:text-lg">Aix-en-Provence</h5>
                             </div>
                         </div>
-
-
-
                     </div>
                 </div>
             </div>
@@ -1123,10 +1122,6 @@
                         </li>
                         <li class="flex items-center gap-2">
                             <span class="w-2 h-2 bg-green-400 rounded-full"></span>
-                            <span>Garantie travaux</span>
-                        </li>
-                        <li class="flex items-center gap-2">
-                            <span class="w-2 h-2 bg-green-400 rounded-full"></span>
                             <span>Intervention rapide</span>
                         </li>
                     </ul>
@@ -1162,10 +1157,10 @@
                                 <i class="fas fa-phone text-xs"></i>
                                 <span>+33 6 09 70 29 91</span>
                             </a>
-                            <a href="mailto:thomas.mirabile@gmail.com"
+                            <a href="mailto:repapc@weboservice.fr"
                                class="flex items-center gap-2 transition hover:scale-105 hover:text-secondary text-sm">
                                 <i class="fas fa-envelope text-xs"></i>
-                                <span>thomas.mirabile@gmail.com</span>
+                                <span>repapc@weboservice.fr</span>
                             </a>
                         </li>
                     </ul>
@@ -1217,7 +1212,7 @@
     </div>
 </button>
 
-<!-- TsParticles JS -->
+
 <!-- TsParticles JS -->
 <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.12.0/tsparticles.bundle.min.js" defer></script>
 <!-- Swiper Slider JS -->
