--- a/index.html
+++ b/index.html
@@ -1227,5 +1227,16 @@
 <script src="assets/js/aos.js" defer></script>
 <!-- Custom Js -->
 <script src="assets/js/custom.js" defer></script>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RNNTTCDCCG"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RNNTTCDCCG');
+</script>
 </body>
 </html>
